[gd_scene load_steps=3 format=3 uid="uid://cd0xt8qsfmfwn"]

[ext_resource type="Script" path="res://scripts/Game/States/precast_display.gd" id="1_45xkp"]
[ext_resource type="Texture2D" uid="uid://btj86acis3hsq" path="res://assets/mix_mode_background.png" id="2_byc76"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_45xkp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(578, 434)
scale = Vector2(1, 0.246914)
texture = ExtResource("2_byc76")

[node name="Grimoire_Dropdown" type="OptionButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -443.0
offset_top = 88.0
offset_right = -393.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grimoire_Val" type="LineEdit" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 88.0
offset_right = -156.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grimoire_Val_Timer" type="Timer" parent="CanvasLayer/Grimoire_Val"]
wait_time = 2.5
one_shot = true

[node name="Grimoire_Val_Terrain" type="OptionButton" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = 88.0
offset_right = -173.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Precast_Position_Type" type="OptionButton" parent="CanvasLayer"]
offset_left = 500.0
offset_top = 412.0
offset_right = 543.0
offset_bottom = 452.0

[connection signal="item_selected" from="CanvasLayer/Grimoire_Dropdown" to="." method="_on_grimoire_dropdown_selected"]
[connection signal="text_changed" from="CanvasLayer/Grimoire_Val" to="." method="_on_grimoire_value_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/Grimoire_Val" to="." method="_on_grimoire_value_text_submitted"]
[connection signal="timeout" from="CanvasLayer/Grimoire_Val/Grimoire_Val_Timer" to="." method="_on_grimoire_value_timer_timeout"]
[connection signal="item_selected" from="CanvasLayer/Grimoire_Val_Terrain" to="." method="_on_grimoire_val_terrain_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Precast_Position_Type" to="." method="_on_precast_position_type_selected"]
